--- a/src/main/resources/templates/empresa.html
+++ b/src/main/resources/templates/empresa.html
@@ -1,146 +1,149 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <!--  -->
-        <title>EMPRESA CRUD</title>
-        <style>
-            body {
+<head>
+    <title>EMPRESA CRUD</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        .section {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+        .btn-custom {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+        }
+        .btn-secondary {
+            background-color: #6c757d;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-secondary:hover {
+            background-color: #4e555a;
+        }
+        .btn-danger {
+            background-color: #dc3545;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-danger:hover {
+            background-color: #a71d2a;
+        }
+    </style>
+</head>
+<body>
 
-
-                background-color: #f8f9fa;
-            }
-
-            .container {
-
-                margin-top: 50px;
-            }
-
-            .section {
-
-                background-color: #fff;
-                border-radius: 5px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                padding: 20px;
-                margin-bottom: 30px;
-            }
-
-            .btn-custom {
-
-                background-color: #007bff;
-                color: #fff;
-                border: none;
-                padding: 8px 15px;
-                border-radius: 5px;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-
-            .btn-custom:hover {
-
-                background-color: #0056b3;
-            }
-
-            .btn-secondary {
-
-                background-color: #6c757d;
-                color: #fff;
-                border: none;
-                padding: 8px 15px;
-                border-radius: 5px;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-
-            .btn-secondary:hover {
-
-                background-color: #4e555a;
-            }
-
-        </style>
-    </head>
-    <body>
-        <div class="container mt-5">
-            <div class="section">
-                <h1 class="mb-4"><i class="fas fa-eye"></i> READ</h1>
-                <div class="table-responsive">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>ID Empresa</th>
-                                <th>Nombre Empresa</th>
-                                <th>Identificación</th>
-                                <th>Fecha Ingreso</th>
-                                <th>Fecha Registro</th>
-                                <th>Dirección</th>
-                                <th>Observaciones</th>
-                                <th>ID Tipo Empresa</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="empresa : ${empresas}">
-                                <td th:text="${empresa.idEmpresa}"></td>
-                                <td th:text="${empresa.nombreEmpresa}"></td>
-                                <td th:text="${empresa.identificacion}"></td>
-                                <td th:text="${empresa.fechaIngreso}"></td>
-                                <td th:text="${empresa.fechaRegistro}"></td>
-                                <td th:text="${empresa.direccion}"></td>
-                                <td th:text="${empresa.observaciones}"></td>
-                                <td th:text="${empresa.tipoEmpresa.idTipoEmpresa}"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="section">
-                <h1><i class="fas fa-plus"></i> CREATE</h1>
-                <form action="/empresas/agregar" method="post" th:object="${empresa}">
-                    <label for="nombreEmpresa">Nombre Empresa:</label>
-                    <input type="text" id="nombreEmpresa" name="nombreEmpresa" required><br>
-                    <label for="identificacion">Identificación:</label>
-                    <input type="text" id="identificacion" name="identificacion" required><br>
-                    <label for="fechaIngreso">Fecha Ingreso:</label>
-                    <input type="date" id="fechaIngreso" name="fechaIngreso" required><br>
-                    <label for="fechaRegistro">Fecha Registro:</label>
-                    <input type="date" id="fechaRegistro" name="fechaRegistro" required><br>
-                    <label for="direccion">Dirección:</label>
-                    <input type="text" id="direccion" name="direccion" required><br>
-                    <label for="observaciones">Observaciones:</label>
-                    <input type="text" id="observaciones" name="observaciones"><br>
-                    <label for="idTipoEmpresa">ID Tipo Empresa:</label>
-                    <input type="text" id="idTipoEmpresa" name="tipoEmpresa.idTipoEmpresa" required><br>
-                    <button type="submit" class="btn btn-custom"><i class="fas fa-check"></i> Agregar Empresa</button>
-                </form>
-                <p th:text="${mensaje}" class="text-success mt-2"></p>
-            </div>
-
-            <h1>UPDATE</h1>
-            <form onsubmit="return redireccionar(event)">
-                <label for="numero">ID:</label>
-                <input type="number" id="numero" required><br>
-                <button type="submit">Ir a editar</button>
-            </form>
-
-            <script>
-                function redireccionar(event) {
-                    event.preventDefault();
-                    var numero = document.getElementById("numero").value;
-                    window.location.href = "/empresas/" + numero + "/editar";
-                    return false;
-                }
-            </script>
-
-            <div class="section">
-                <h1>DELETE</h1>
-                <form th:action="@{/empresas/eliminar}" method="post">
-                    <label for="idEliminar">ID:</label>
-                    <input type="number" id="idEliminar" name="idEliminar" required><br>
-                    <button type="submit" class="btn btn-danger"><i class="fas fa-EDIT"></i> Eliminar</button>
-                </form>
-            </div>
-            <!-- Botón para regresar al inicio -->
-            <div class="mt-5">
-                <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
-            </div>
+<div class="container mt-5">
+    <div class="section">
+        <h1 class="mb-4"><i class="fas fa-eye"></i> READ</h1>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID Empresa</th>
+                        <th>Nombre Empresa</th>
+                        <th>Identificación</th>
+                        <th>Fecha Ingreso</th>
+                        <th>Fecha Registro</th>
+                        <th>Dirección</th>
+                        <th>Observaciones</th>
+                        <th>ID Tipo Empresa</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="empresa : ${empresas}">
+                        <td th:text="${empresa.idEmpresa}"></td>
+                        <td th:text="${empresa.nombreEmpresa}"></td>
+                        <td th:text="${empresa.identificacion}"></td>
+                        <td th:text="${empresa.fechaIngreso}"></td>
+                        <td th:text="${empresa.fechaRegistro}"></td>
+                        <td th:text="${empresa.direccion}"></td>
+                        <td th:text="${empresa.observaciones}"></td>
+                        <td th:text="${empresa.tipoEmpresa.idTipoEmpresa}"></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </body>
+    </div>
+
+    <div class="section">
+        <h1><i class="fas fa-plus"></i> CREATE</h1>
+        <form action="/empresas/agregar" method="post" th:object="${empresa}">
+            <label for="nombreEmpresa">Nombre Empresa:</label>
+            <input type="text" id="nombreEmpresa" name="nombreEmpresa" class="form-control" required><br>
+            <label for="identificacion">Identificación:</label>
+            <input type="text" id="identificacion" name="identificacion" class="form-control" required><br>
+            <label for="fechaIngreso">Fecha Ingreso:</label>
+            <input type="date" id="fechaIngreso" name="fechaIngreso" class="form-control" required><br>
+            <label for="fechaRegistro">Fecha Registro:</label>
+            <input type="date" id="fechaRegistro" name="fechaRegistro" class="form-control" required><br>
+            <label for="direccion">Dirección:</label>
+            <input type="text" id="direccion" name="direccion" class="form-control" required><br>
+            <label for="observaciones">Observaciones:</label>
+            <input type="text" id="observaciones" name="observaciones" class="form-control"><br>
+            <label for="idTipoEmpresa">ID Tipo Empresa:</label>
+            <input type="text" id="idTipoEmpresa" name="tipoEmpresa.idTipoEmpresa" class="form-control" required><br>
+            <button type="submit" class="btn btn-custom"><i class="fas fa-check"></i> Agregar Empresa</button>
+        </form>
+        <p th:text="${mensaje}" class="text-success mt-2"></p>
+    </div>
+
+    <div class="section">
+        <h1><i class="fas fa-pencil-alt"></i> UPDATE</h1>
+        <form onsubmit="return redireccionar(event)">
+            <label for="numero">ID:</label>
+            <input type="number" id="numero" class="form-control" required><br>
+            <button type="submit" class="btn btn-secondary"><i class="fas fa-edit"></i> Ir a editar</button>
+        </form>
+    </div>
+
+    <div class="section">
+        <h1><i class="fas fa-trash-alt"></i> DELETE</h1>
+        <form th:action="@{/empresas/eliminar}" method="post">
+            <label for="idEliminar">ID:</label>
+            <input type="number" id="idEliminar" name="idEliminar" class="form-control" required><br>
+            <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</button>
+        </form>
+    </div>
+
+    <!-- Botón para regresar al inicio -->
+    <div class="mt-5">
+        <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
+    </div>
+</div>
+
+<script>
+    function redireccionar(event) {
+        event.preventDefault();
+        var numero = document.getElementById("numero").value;
+        window.location.href = "/empresas/" + numero + "/editar";
+        return false;
+    }
+</script>
+
+</body>
 </html>
