--- a/src/main/resources/templates/unidad.html
+++ b/src/main/resources/templates/unidad.html
@@ -1,93 +1,101 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>UNIDAD CRUD</title>
-        <style>
-            body {
-                background-color: #f8f9fa;
-            }
+<head>
+    <title>UNIDAD CRUD</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        .section {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+        .btn-custom {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+        }
+        .btn-secondary {
+            background-color: #6c757d;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-secondary:hover {
+            background-color: #4e555a;
+        }
+        .btn-danger {
+            background-color: #dc3545;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn-danger:hover {
+            background-color: #a71d2a;
+        }
+    </style>
+</head>
+<body>
 
-            .container {
-                margin-top: 50px;
-            }
+<div class="container mt-5">
+    <div class="section">
+        <h1 class="mb-4"><i class="fas fa-eye"></i> READ</h1>
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID Placa</th>
+                        <th>Estado Unidad</th>
+                        <th>Empresa</th>
+                        <th>Año de la Unidad</th>
+                        <th>Capacidad de Carga</th>
+                        <th>Chasis</th>
+                        <th>Descripción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="unidad : ${unidades}">
+                        <td th:text="${unidad.idPlaca}"></td>
+                        <td th:text="${unidad.estadoUnidad.getEstadoUnidad}"></td>
+                        <td th:text="${unidad.empresa.nombreEmpresa}"></td>
+                        <td th:text="${unidad.unidadYear}"></td>
+                        <td th:text="${unidad.capacidadCarga}"></td>
+                        <td th:text="${unidad.chasis}"></td>
+                        <td th:text="${unidad.descripcion}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-            .section {
-                background-color: #fff;
-                border-radius: 5px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                padding: 20px;
-                margin-bottom: 30px;
-            }
-
-            .btn-custom {
-                background-color: #007bff;
-                color: #fff;
-                border: none;
-                padding: 8px 15px;
-                border-radius: 5px;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-
-            .btn-custom:hover {
-                background-color: #0056b3;
-            }
-
-            .btn-secondary {
-                background-color: #6c757d;
-                color: #fff;
-                border: none;
-                padding: 8px 15px;
-                border-radius: 5px;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-
-            .btn-secondary:hover {
-                background-color: #4e555a;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-5">
-            <div class="section">
-                <h1 class="mb-4"><i class="fas fa-eye"></i> READ</h1>
-                <div class="table-responsive">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>ID Placa</th>
-                                <th>Estado Unidad</th>
-                                <th>Empresa</th>
-                                <th>Año de la Unidad</th>
-                                <th>Capacidad de Carga</th>
-                                <th>Chasis</th>
-                                <th>Descripción</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="unidad : ${unidades}">
-                                <td th:text="${unidad.idPlaca}"></td>
-                                <td th:text="${unidad.estadoUnidad.getEstadoUnidad}"></td>
-                                <td th:text="${unidad.empresa.nombreEmpresa}"></td>
-                                <td th:text="${unidad.unidadYear}"></td>
-                                <td th:text="${unidad.capacidadCarga}"></td>
-                                <td th:text="${unidad.chasis}"></td>
-                                <td th:text="${unidad.descripcion}"></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <div class="section">
-                        <h1>CREATE</h1>
+    <div class="section">
+        <h1><i class="fas fa-plus"></i> CREATE</h1>
         <form action="/unidades/agregar" method="post" th:object="${unidad}">
             <label for="estadoUnidad">Estado Unidad:</label>
-            <input type="number" id="estadoUnidad" name="estadoUnidad.idEstadoUnidad" required><br>
+            <input type="text" id="estadoUnidad" name="estadoUnidad.idEstadoUnidad" required><br>
 
             <label for="empresa">Empresa:</label>
-            <input type="number" id="empresa" name="empresa.idEmpresa" required><br>
+            <input type="text" id="empresa" name="empresa.idEmpresa" required><br>
 
             <label for="unidadYear">Año de la Unidad:</label>
             <input type="text" id="unidadYear" name="unidadYear" required><br>
@@ -101,44 +109,43 @@
             <label for="descripcion">Descripción:</label>
             <input type="text" id="descripcion" name="descripcion" required><br>
 
-            <button type="submit">Agregar Unidad</button>
+            <button type="submit" class="btn btn-custom"><i class="fas fa-check"></i> Agregar Unidad</button>
         </form>
-                <p th:text="${mensaje}" class="text-success mt-2"></p>
-            </div>
+        <p th:text="${mensaje}" class="text-success mt-2"></p>
+    </div>
 
-            <div class="section">
-                <h1>UPDATE</h1>
-                <form onsubmit="return redireccionar(event)">
-                    <label for="idPlaca">ID:</label>
-                    <input type="number" id="idPlaca" required><br>
-                    <button type="submit">Ir a editar</button>
-                </form>
+    <div class="section">
+        <h1><i class="fas fa-pencil-alt"></i> UPDATE</h1>
+        <form onsubmit="return redireccionar(event)">
+            <label for="idPlaca">ID:</label>
+            <input type="number" id="idPlaca" required><br>
+            <button type="submit" class="btn btn-secondary"><i class="fas fa-edit"></i> Ir a editar</button>
+        </form>
+    </div>
 
-                <script>
-                    function redireccionar(event) {
-                        event.preventDefault();
-                        var idPlaca = document.getElementById("idPlaca").value;
-                        window.location.href = "/unidades/" + idPlaca + "/editar";
-                        return false;
-                    }
-                </script>
-            </div>
+    <div class="section">
+        <h1><i class="fas fa-trash-alt"></i> DELETE</h1>
+        <form th:action="@{/unidades/eliminar}" method="post">
+            <label for="idEliminar">ID:</label>
+            <input type="number" id="idEliminar" name="idEliminar" class="form-control" required><br>
+            <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</button>
+        </form>
+    </div>
 
-            <div class="section">
-                <h1>DELETE</h1>
-                <form th:action="@{/unidades/eliminar}" method="post">
-                    <div class="form-group">
-                        <label for="idEliminar">ID:</label>
-                        <input type="number" id="idEliminar" name="idEliminar" class="form-control" required>
-                    </div>
-                    <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Eliminar</button>
-                </form>
-            </div>
+    <!-- Botón para regresar al inicio -->
+    <div class="mt-5">
+        <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
+    </div>
+</div>
 
-            <!-- Botón para regresar al inicio -->
-            <div class="mt-5">
-                <a href="/" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Regresar al Inicio</a>
-            </div>
-        </div>
-    </body>
+<script>
+    function redireccionar(event) {
+        event.preventDefault();
+        var idPlaca = document.getElementById("idPlaca").value;
+        window.location.href = "/unidades/" + idPlaca + "/editar";
+        return false;
+    }
+</script>
+
+</body>
 </html>
